--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -19,8 +19,16 @@ serverurl=unix://%(ENV_VIRTUALENV_ROOT)s/run/supervisor/supervisor.sock
 
 [program:adpay]
 command=python %(ENV_VIRTUALENV_ROOT)s/adpay/daemon.py
-pidfile=%(ENV_VIRTUALENV_ROOT)s/run/adpay/adselect.pid
-logfile=%(ENV_VIRTUALENV_ROOT)s/log/adpay/adselect.log
+pidfile=%(ENV_VIRTUALENV_ROOT)s/run/adpay/adpay.pid
+logfile=%(ENV_VIRTUALENV_ROOT)s/log/adpay/adpay.log
 logfile_maxbytes=50MB
 logfile_backups=10
 loglevel=info
+
+[program:mongo]
+command=mongod
+    --dbpath %(ENV_VIRTUALENV_ROOT)s/db/mongo
+    --pidfilepath %(ENV_VIRTUALENV_ROOT)s/run/mongo/mongo.pid
+    --logpath %(ENV_VIRTUALENV_ROOT)s/log/mongo/mongo.pid
+    --bind_ip 127.0.0.1
+    --port 27016
