--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -18,12 +18,13 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix://%(ENV_VIRTUALENV_ROOT)s/run/supervisor/supervisor.sock
 
 [program:adpay]
-command=python %(ENV_VIRTUALENV_ROOT)s/adpay/daemon.py
+command=python /adpay/daemon.py
 pidfile=%(ENV_VIRTUALENV_ROOT)s/run/adpay/adpay.pid
 logfile=%(ENV_VIRTUALENV_ROOT)s/log/adpay/adpay.log
 logfile_maxbytes=50MB
 logfile_backups=10
 loglevel=info
+redirect_stderr=true
 
 [program:mongo]
 command=mongod
