Fix log filename.

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -30,6 +30,6 @@ redirect_stderr=true
 command=mongod
     --dbpath %(ENV_VIRTUALENV_ROOT)s/db/mongo
     --pidfilepath %(ENV_VIRTUALENV_ROOT)s/run/mongo/mongo.pid
-    --logpath %(ENV_VIRTUALENV_ROOT)s/log/mongo/mongo.pid
+    --logpath %(ENV_VIRTUALENV_ROOT)s/log/mongo/mongo.log
     --bind_ip 127.0.0.1
     --port 27016
