Travis, Sonar and coverage.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,3 +19,4 @@ sonar.links.issue=https://github.com/adshares/adpay/issues
 sonar.sourceEncoding=UTF-8
 sonar.sources=adpay
 sonar.tests=tests
+sonar.python.coverage.reportPath=coverage.xml
