Moved venv to a separate directory.

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -1,12 +1,12 @@
 [unix_http_server]
-file=%(ENV_VIRTUALENV_ROOT)s/run/supervisor/supervisor.sock
+file=%(ENV_ADPAY_ROOT)s/run/supervisor/supervisor.sock
 
 [supervisord]
-logfile=%(ENV_VIRTUALENV_ROOT)s/log/supervisor/supervisord.log
+logfile=%(ENV_ADPAY_ROOT)s/log/supervisord.log
 logfile_maxbytes=50MB
 logfile_backups=10
 loglevel=info
-pidfile=%(ENV_VIRTUALENV_ROOT)s/run/supervisor/supervisord.pid
+pidfile=%(ENV_ADPAY_ROOT)s/run/supervisor/supervisord.pid
 nodaemon=false
 minfds=1024
 minprocs=200
@@ -15,12 +15,12 @@ minprocs=200
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix://%(ENV_VIRTUALENV_ROOT)s/run/supervisor/supervisor.sock
+serverurl=unix://%(ENV_ADPAY_ROOT)s/run/supervisor/supervisor.sock
 
 [program:adpay]
-command=python %(ENV_VIRTUALENV_ROOT)s/adpay/daemon.py
-pidfile=%(ENV_VIRTUALENV_ROOT)s/run/adpay/adpay.pid
-logfile=%(ENV_VIRTUALENV_ROOT)s/log/adpay/adpay.log
+command=python %(ENV_ADPAY_ROOT)s/adpay/daemon.py
+pidfile=%(ENV_ADPAY_ROOT)s/run/adpay/adpay.pid
+logfile=%(ENV_ADPAY_ROOT)s/log/adpay.log
 logfile_maxbytes=50MB
 logfile_backups=10
 loglevel=info
@@ -28,8 +28,8 @@ redirect_stderr=true
 
 [program:mongo]
 command=mongod
-    --dbpath %(ENV_VIRTUALENV_ROOT)s/db/mongo
-    --pidfilepath %(ENV_VIRTUALENV_ROOT)s/run/mongo/mongo.pid
-    --logpath %(ENV_VIRTUALENV_ROOT)s/log/mongo/mongo.log
+    --dbpath %(ENV_ADPAY_ROOT)s/db/mongo
+    --pidfilepath %(ENV_ADPAY_ROOT)s/run/mongo/mongo.pid
+    --logpath %(ENV_ADPAY_ROOT)s/log/mongo.log
     --bind_ip 127.0.0.1
     --port 27016
