Redirecto stdout to logfile.

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -20,10 +20,9 @@ serverurl=unix://%(ENV_ADPAY_ROOT)s/run/supervisor/supervisor.sock
 [program:adpay]
 command=python %(ENV_ADPAY_ROOT)s/adpay/daemon.py
 pidfile=%(ENV_ADPAY_ROOT)s/run/adpay/adpay.pid
-logfile=%(ENV_ADPAY_ROOT)s/log/adpay.log
-logfile_maxbytes=50MB
-logfile_backups=10
-loglevel=info
+stdout_logfile=%(ENV_ADPAY_ROOT)s/log/adpay.log
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups=10
 redirect_stderr=true
 
 [program:mongo]
