--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,16 @@
-# Project language
-language: python
+sudo: required
 
-# Python version
-python:
-  - 2.7
+language: ruby
 
-# Allows use container-based infrastructure
-sudo: false
+services:
+  - docker
 
-# Cache pip dependencies
-cache: pip
-
-# Install python dependencies
-install:
-  - pip install -r requirements.txt
-  - pip install mock mongomock
-
-before_script:
-  - export PYTHONPATH=$PYTHONPATH:$(pwd)
-  - export _=$(pwd)
-  - cp .env.dist .env
+env:
+  - >-
+    DOCKER_IMAGE=awlodarkiewicz/devops:build-latest
+    HOST_PATH=/home/travis/build/adshares/adpay
+    BUILD_PATH=/build/adpay
+    BUILD_NAME=adpay_build
 
 stages:
   - test
@@ -29,14 +20,49 @@ jobs:
   include:
     # Python unit tests
     - stage: test
-      script: trial tests
+      script:
+        ## Setup test environment
+        # Run docker container
+        - docker pull $DOCKER_IMAGE
+        - docker run -d --mount type=bind,src=$HOST_PATH,dst=$BUILD_PATH --name $BUILD_NAME $DOCKER_IMAGE sleep infinity
+
+        # Run build script
+        - docker exec $BUILD_NAME /bin/bash -c "cd $BUILD_PATH && ./scripts/build.sh"
+
+        # Enable aliases for non-interactive shells
+        - shopt -s expand_aliases
+        # Set alias - please note the missing quote you need to append.
+        - alias docker_exec='docker exec $BUILD_NAME /bin/bash -c "cd $BUILD_PATH && '
+
+        - docker_exec pip install mock mongomock"
+        - docker_exec trial tests"
+
+        # Cleanup
+        - docker stop $BUILD_NAME && docker rm $BUILD_NAME
+
     # Coverage generation and Sonar Qube
     - stage: quality
       script:
-       - pip install coverage
-       - coverage run `which trial` tests
-       - coverage xml -i
-       - sonar-scanner
+        ## Setup test environment
+        # Run docker container
+        - docker pull $DOCKER_IMAGE
+        - docker run -d --mount type=bind,src=$HOST_PATH,dst=$BUILD_PATH --name $BUILD_NAME $DOCKER_IMAGE sleep infinity
+
+        # Run build script
+        - docker exec $BUILD_NAME /bin/bash -c "cd $BUILD_PATH && ./scripts/build.sh"
+
+        # Enable aliases for non-interactive shells
+        - shopt -s expand_aliases
+        # Set alias - please note the missing quote you need to append.
+        - alias docker_exec='docker exec $BUILD_NAME /bin/bash -c "cd $BUILD_PATH && '
+
+        - docker_exec pip install coverage"
+        - docker_exec coverage run `which trial` tests"
+        - docker_exec coverage xml -i"
+        - docker_exec sonar-scanner"
+
+        # Cleanup
+        - docker stop $BUILD_NAME && docker rm $BUILD_NAME
 
 # After a build, send email notification with the build results
 notifications:
