--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
   # Enable aliases for non-interactive shells
   - shopt -s expand_aliases
   # Set alias - please note the missing quote you need to append.
-  - alias in_docker='docker exec -w $BUILD_PATH $BUILD_NAME'
+  - alias in_docker='docker exec $BUILD_NAME /bin/bash -c "cd $BUILD_PATH && '
   # Set aliast for cleanup
   - alias cleanup_docker='docker stop $BUILD_NAME && docker rm $BUILD_NAME'
 
@@ -35,10 +35,10 @@ jobs:
         - docker run -d --mount type=bind,src=$HOST_PATH,dst=$BUILD_PATH --name $BUILD_NAME $DOCKER_IMAGE sleep infinity
 
         # Run build script
-        - in_docker /bin/bash scripts/build.sh
+        - in_docker /bin/bash scripts/build.sh"
 
-        - in_docker pip install mock mongomock
-        - in_docker trial tests
+        - in_docker pip install mock mongomock"
+        - in_docker trial tests"
 
         # Cleanup
         - cleanup_docker
