--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
     HOST_PATH=/home/travis/build/adshares/adpay
     BUILD_PATH=/build/adpay
     BUILD_NAME=adpay_build
+    PYTHONPATH=$PYTHONPATH:$BUILD_PATH
 
 stages:
   - test
