--- a/.env.dist
+++ b/.env.dist
@@ -1,13 +1,13 @@
-ADPAY_LOG_CONFIG_FILE=config/log_config.json
+ADPAY_LOG_CONFIG_FILE=${ADPAY_LOG_CONFIG_FILE:-config/log_config.json}
 
-ADPAY_MONGO_DB_PORT=27016
-ADPAY_MONGO_DB_NAME=adpay
+ADPAY_MONGO_DB_PORT=${ADPAY_MONGO_DB_PORT:-27016}
+ADPAY_MONGO_DB_NAME=${ADPAY_MONGO_DB_NAME:-adpay}
 
-ADPAY_MAX_USER_KEYWORDS_IN_PROFILE=50
+ADPAY_MAX_USER_KEYWORDS_IN_PROFILE=${ADPAY_MAX_USER_KEYWORDS_IN_PROFILE:-50}
 
-ADPAY_EVENT_TYPE_CLICK=click
-ADPAY_EVENT_TYPE_VIEW=view
-ADPAY_EVENT_TYPE_CONVERSION=conversion
+ADPAY_EVENT_TYPE_CLICK=${ADPAY_EVENT_TYPE_CLICK:-click}
+ADPAY_EVENT_TYPE_VIEW=${ADPAY_EVENT_TYPE_VIEW:-view}
+ADPAY_EVENT_TYPE_CONVERSION=${ADPAY_EVENT_TYPE_CONVERSION:-conversion}
 
-ADPAY_SERVER_PORT=8090
-ADPAY_SECONDS_PER_HOUR=3600
+ADPAY_SERVER_PORT=${ADPAY_SERVER_PORT:-8090}
+ADPAY_SECONDS_PER_HOUR=${ADPAY_SECONDS_PER_HOUR:-3600}
