--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: required
 
-language: ruby
+language: minimal
 
 services:
   - docker
@@ -35,10 +35,14 @@ jobs:
         - docker pull $DOCKER_IMAGE
         - docker run -d --mount type=bind,src=$HOST_PATH,dst=$BUILD_PATH --name $BUILD_NAME $DOCKER_IMAGE sleep infinity
 
+        # Run pre-build script
+        - in_docker /bin/bash scripts/pre-build.sh"
+
         # Run build script
         - in_docker /bin/bash scripts/build.sh"
 
         - in_docker pip install mock mongomock"
+        - in_docker pip install python-dotenvcli
         - in_docker trial tests"
 
         # Cleanup
@@ -52,13 +56,11 @@ jobs:
         - docker pull $DOCKER_IMAGE
         - docker run -d --mount type=bind,src=$HOST_PATH,dst=$BUILD_PATH --name $BUILD_NAME $DOCKER_IMAGE sleep infinity
 
+        # Run pre-build script
+        - docker exec $BUILD_NAME /bin/bash -c "cd $BUILD_PATH && ./scripts/pre-build.sh"
+
         # Run build script
         - docker exec $BUILD_NAME /bin/bash -c "cd $BUILD_PATH && ./scripts/build.sh"
-
-        # Enable aliases for non-interactive shells
-        - shopt -s expand_aliases
-        # Set alias - please note the missing quote you need to append.
-        - alias docker_exec='docker exec $BUILD_NAME /bin/bash -c "cd $BUILD_PATH && '
 
         - docker_exec pip install coverage"
         - docker_exec coverage run `which trial` tests"
@@ -66,7 +68,7 @@ jobs:
         - docker_exec sonar-scanner"
 
         # Cleanup
-        - docker stop $BUILD_NAME && docker rm $BUILD_NAME
+        - cleanup_docker
 
 # After a build, send email notification with the build results
 notifications:
