--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,24 @@ services:
   - docker
 
 env:
-  - >-
-    DOCKER_IMAGE=awlodarkiewicz/devops:build-latest
-    HOST_PATH=/home/travis/build/adshares/adpay
-    BUILD_PATH=/build/adpay
-    BUILD_NAME=adpay_build
-    PYTHONPATH=$PYTHONPATH:$BUILD_PATH
+  global:
+    - >-
+      DOCKER_IMAGE=awlodarkiewicz/devops:build-latest
+      HOST_PATH=/home/travis/build/adshares/adpay
+      BUILD_PATH=/build/adpay
+      BUILD_NAME=adpay_build
+      PYTHONPATH=$PYTHONPATH:$BUILD_PATH
+      ADPAY_LOG_CONFIG_FILE=config/log_config.json
+      ADPAY_MONGO_DB_PORT=27016
+      ADPAY_MONGO_DB_NAME=adpay
+      ADPAY_MAX_USER_KEYWORDS_IN_PROFILE=50
+      ADPAY_EVENT_TYPE_CLICK=click
+      ADPAY_EVENT_TYPE_VIEW=view}
+      ADPAY_EVENT_TYPE_CONVERSION=conversion
+      ADPAY_SERVER_PORT=8090
+      ADPAY_SECONDS_PER_HOUR=3600
+  matrix:
+    - ADPAY_APP_ENV=dev
 
 stages:
   - test
@@ -41,9 +53,7 @@ jobs:
         # Run build script
         - in_docker /bin/bash scripts/build.sh"
 
-        - in_docker pip install mock mongomock"
-        - in_docker pip install python-dotenvcli
-        - in_docker trial tests"
+        - in_docker pipenv run trial tests"
 
         # Cleanup
         - cleanup_docker
