--- a/.env.dist
+++ b/.env.dist
@@ -23,7 +23,7 @@ ADPAY_APP_ENV=${ADPAY_APP_ENV}
 # ADPAY_MAX_USER_KEYWORDS_IN_PROFILE=50
 
 # ADPAY_EVENT_TYPE_CLICK=click
-# ADPAY_EVENT_TYPE_VIEW=view}
+# ADPAY_EVENT_TYPE_VIEW=view
 # ADPAY_EVENT_TYPE_CONVERSION=conversion
 
 # ADPAY_SERVER_PORT=8090
