--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
       ADPAY_MONGO_DB_NAME=adpay
       ADPAY_MAX_USER_KEYWORDS_IN_PROFILE=50
       ADPAY_EVENT_TYPE_CLICK=click
-      ADPAY_EVENT_TYPE_VIEW=view}
+      ADPAY_EVENT_TYPE_VIEW=view
       ADPAY_EVENT_TYPE_CONVERSION=conversion
       ADPAY_SERVER_PORT=8090
       ADPAY_SECONDS_PER_HOUR=3600
