--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ jobs:
           docker run -d
           --mount type=bind,src=$HOST_PATH,dst=$BUILD_PATH
           -e TRAVIS=true
+          -e PYTHONPATH=$BUILD_PATH
           --env-file adpay.env
           --name $BUILD_NAME
           $DOCKER_IMAGE
@@ -80,7 +81,7 @@ jobs:
         # Run build script
         - docker exec $BUILD_NAME /bin/bash -c "cd $BUILD_PATH && ./scripts/build.sh"
 
-        - docker_exec pipenv run coverage run `which trial` tests"
+        - docker_exec pipenv run coverage run \$VIRTUAL_ENV/bin/trial tests"
         - docker_exec pipenv run coverage xml -i"
         - docker_exec pipenv run sonar-scanner"
 
