--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,16 @@ jobs:
         ## Setup test environment
         # Run docker container
         - docker pull $DOCKER_IMAGE
-        - docker run -d --mount type=bind,src=$HOST_PATH,dst=$BUILD_PATH --name $BUILD_NAME $DOCKER_IMAGE sleep infinity
+        - env | grep ADPAY > adpay.env
+        - >
+          docker run -d
+          --mount type=bind,src=$HOST_PATH,dst=$BUILD_PATH
+          -e TRAVIS=true
+          -e PYTHONPATH=$BUILD_PATH
+          --env-file adpay.env
+          --name $BUILD_NAME
+          $DOCKER_IMAGE
+          sleep infinity
 
         # Run pre-build script
         - docker exec $BUILD_NAME /bin/bash -c "cd $BUILD_PATH && ./scripts/pre-build.sh"
