--- a/.travis.yml
+++ b/.travis.yml
@@ -92,6 +92,8 @@ jobs:
 
         - in_docker ./scripts/quality-test.sh"
 
+        - sonar-scanner
+
         # Cleanup
         - cleanup_docker
 
