update travis tests

--- a/.coveragerc
+++ b/.coveragerc
@@ -7,3 +7,7 @@ omit =
     # omit Travis-CI virtualenv directory
     */virtualenv/python*
     */lib/python*/site-packages/*
+    # omit pipenv
+    .venv/*
+    # omit pybrowscap
+    pybrowscap/*
