--- a/.travis.yml
+++ b/.travis.yml
@@ -9,27 +9,25 @@ services:
 
 env:
   global:
-    - >-
-      DOCKER_IMAGE=awlodarkiewicz/devops:build-latest
-      HOST_PATH=/home/travis/build/adshares/adpay
-      BUILD_PATH=/build/adpay
-      BUILD_NAME=adpay_build
-      PYTHONPATH=$PYTHONPATH:$BUILD_PATH
-      ADPAY_LOG_CONFIG_FILE=config/log_config.json
-      ADPAY_MONGO_DB_PORT=27016
-      ADPAY_MONGO_DB_NAME=adpay
-      ADPAY_MAX_USER_KEYWORDS_IN_PROFILE=50
-      ADPAY_EVENT_TYPE_CLICK=click
-      ADPAY_EVENT_TYPE_VIEW=view
-      ADPAY_EVENT_TYPE_CONVERSION=conversion
-      ADPAY_SERVER_PORT=8090
-      ADPAY_SECONDS_PER_HOUR=3600
+    - DOCKER_IMAGE=awlodarkiewicz/devops:build-latest
+    - HOST_PATH=/home/travis/build/adshares/adpay
+    - BUILD_PATH=/build/adpay
+    - BUILD_NAME=adpay_build
+    - PYTHONPATH=$PYTHONPATH:$BUILD_PATH
+    - ADPAY_LOG_CONFIG_FILE=config/log_config.json
+    - ADPAY_MONGO_DB_PORT=27016
+    - ADPAY_MONGO_DB_NAME=adpay
+    - ADPAY_MAX_USER_KEYWORDS_IN_PROFILE=50
+    - ADPAY_EVENT_TYPE_CLICK=click
+    - ADPAY_EVENT_TYPE_VIEW=view
+    - ADPAY_EVENT_TYPE_CONVERSION=conversion
+    - ADPAY_SERVER_PORT=8090
+    - ADPAY_SECONDS_PER_HOUR=3600
   matrix:
     - ADPAY_APP_ENV=dev
 
 stages:
-  - test
-  - quality
+  - Test build, test code, test quality
 
 before_script:
   # Enable aliases for non-interactive shells
@@ -41,36 +39,8 @@ before_script:
 
 jobs:
   include:
-    # Python unit tests
-    - stage: test
-      script:
-        ## Setup test environment
-        # Run docker container
-        - docker pull $DOCKER_IMAGE
-        - env | grep ADPAY > adpay.env
-        - >
-          docker run -d
-          --mount type=bind,src=$HOST_PATH,dst=$BUILD_PATH
-          -e TRAVIS=true
-          -e PYTHONPATH=$BUILD_PATH
-          --env-file adpay.env
-          --name $BUILD_NAME
-          $DOCKER_IMAGE
-          sleep infinity
-
-        # Run pre-build script
-        - in_docker /bin/bash scripts/pre-build.sh"
-
-        # Run build script
-        - in_docker /bin/bash scripts/build.sh"
-
-        - in_docker pipenv run trial tests"
-
-        # Cleanup
-        - cleanup_docker
-
     # Coverage generation and Sonar Qube
-    - stage: quality
+    - stage: Test build, test code, test quality
       script:
         ## Setup test environment
         # Run docker container
@@ -81,6 +51,7 @@ jobs:
           --mount type=bind,src=$HOST_PATH,dst=$BUILD_PATH
           -e TRAVIS=true
           -e PYTHONPATH=$BUILD_PATH
+          -e PIPENV_VENV_IN_PROJECT=1
           --env-file adpay.env
           --name $BUILD_NAME
           $DOCKER_IMAGE
@@ -92,7 +63,13 @@ jobs:
         # Run build script
         - in_docker ./scripts/build.sh"
 
-        - in_docker ./scripts/quality-test.sh"
+        - in_docker /bin/bash scripts/pre-install.sh"
+
+        - in_docker pipenv run tests"
+
+        - in_docker pipenv run quality"
+
+        - in_docker pipenv run coverage report -m"
 
         - sonar-scanner
 
