--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [dev-packages]
-coverage = "~=4.5.1"
-mock = "~=2.0.0"
-mongomock = "~=3.13.0"
+coverage = "~=4.5"
+mock = "~=2.0"
+mongomock = "~=3.13"
 
 [packages]
 jsonobject = "~=0.8.0"
@@ -16,3 +16,7 @@ Twisted = "~=18.9.0"
 
 [requires]
 python_version = "2.7"
+
+[scripts]
+tests = "coverage run .venv/bin/trial tests"
+quality = "coverage xml -i"
