add custom mongo host

--- a/.env.dist
+++ b/.env.dist
@@ -2,6 +2,7 @@ ADPAY_LOG_CONFIG_FILE=${ADPAY_LOG_CONFIG_FILE}
 
 ADPAY_MONGO_DB_PORT=${ADPAY_MONGO_DB_PORT}
 ADPAY_MONGO_DB_NAME=${ADPAY_MONGO_DB_NAME}
+ADPAY_MONGO_DB_HOST=${ADPAY_MONGO_DB_HOST}
 
 ADPAY_MAX_USER_KEYWORDS_IN_PROFILE=${ADPAY_MAX_USER_KEYWORDS_IN_PROFILE}
 
@@ -17,8 +18,9 @@ ADPAY_APP_ENV=${ADPAY_APP_ENV}
 
 # ADPAY_LOG_CONFIG_FILE=config/log_config.json
 
-# ADPAY_MONGO_DB_PORT=27016
+# ADPAY_MONGO_DB_PORT=27017
 # ADPAY_MONGO_DB_NAME=adpay
+# ADPAY_MONGO_DB_HOST=localhost
 
 # ADPAY_MAX_USER_KEYWORDS_IN_PROFILE=50
 
