update build scripts

--- a/.env.dist
+++ b/.env.dist
@@ -14,7 +14,7 @@ ADPAY_SERVER_PORT=${ADPAY_SERVER_PORT}
 ADPAY_SECONDS_PER_HOUR=${ADPAY_SECONDS_PER_HOUR}
 
 ADPAY_APP_ENV=${ADPAY_APP_ENV}
-
+PIPENV_VENV_IN_PROJECT=1
 
 # ADPAY_LOG_CONFIG_FILE=config/log_config.json
 
