make errors more verbose

--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ jobs:
         - in_docker pipenv run coverage report -m"
 
         # Test documentation building
-        - in_docker pipenv run build_docs -W"
+        - in_docker pipenv run build_docs -W --keep-going"
 
         - sonar-scanner
 
