--- a/deploy/supervisor.conf
+++ b/deploy/supervisor.conf
@@ -1,22 +1,23 @@
-[program:adpay]
-directory=/opt/adshares/adpay
+[program:${VENDOR_NAME}_adpay]
+directory=/opt/${VENDOR_NAME}/adpay
 command=pipenv run python daemon.py
-pidfile=/var/run/adshares/adpay.pid
+pidfile=/var/run/${VENDOR_NAME}/adpay.pid
 
-user=adshares
+user=${VENDOR_NAME}
 
-stdout_logfile=/var/log/adshares/adpay.log
+stdout_logfile=/var/log/${VENDOR_NAME}/adpay.log
 stdout_logfile_maxbytes=5000000
 
-stderr_logfile=/var/log/adshares/adpay.log
+stderr_logfile=/var/log/${VENDOR_NAME}/adpay.log
 stderr_logfile_maxbytes=5000000
 
 environment=
     ADPAY_MONGO_DB_PORT="27017",
-    ADPAY_MONGO_DB_NAME="adpay",
+    ADPAY_MONGO_DB_NAME="${VENDOR_NAME}_adpay",
     ADPAY_MONGO_DB_HOST="localhost",
 
-    ADPAY_SERVER_PORT="8012",
+    ADPAY_SERVER_PORT="${APP_PORT}",
+    ADPAY_SERVER_INTERFACE="${APP_HOST}",
     ADPAY_ENABLE_DEBUG_ENDPOINT="0"
 
 ;    ADPAY_SECONDS_PER_HOUR=3600
