--- a/deploy/supervisor.conf
+++ b/deploy/supervisor.conf
@@ -3,7 +3,7 @@ directory=/opt/${VENDOR_NAME}/adpay
 command=pipenv run python daemon.py
 pidfile=/var/run/${VENDOR_NAME}/adpay.pid
 
-user=${VENDOR_NAME}
+user=${VENDOR_USER}
 
 stdout_logfile=/var/log/${VENDOR_NAME}/adpay.log
 stdout_logfile_maxbytes=5000000
