--- a/.env
+++ b/.env
@@ -14,10 +14,10 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=17b2d4b424358fa783b4487ea043580f
 APP_VERSION=1.0.0
-APP_NAME=Adpay
+APP_NAME=AdPay
 APP_PORT=8012
 APP_HOST=localhost
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
