--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
 # define your env variables for the test env here
-KERNEL_CLASS='Adshares\Adpay\Kernel'
+KERNEL_CLASS='Adshares\AdPay\Kernel'
 APP_SECRET='s$cretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
