--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "adshares/adpay",
-	"description": "Implementation of Adpay service in Adshares Network",
+	"description": "Implementation of AdPay service in Adshares Network",
 	"type": "project",
 	"license": "proprietary",
 	"authors": [
@@ -18,6 +18,8 @@
 		"ext-ctype": "*",
 		"ext-iconv": "*",
 		"ext-json": "*",
+		"doctrine/doctrine-bundle": "^1.11",
+		"doctrine/doctrine-migrations-bundle": "^2.0",
 		"symfony/console": "^4.3",
 		"symfony/dotenv": "^4.3",
 		"symfony/flex": "^1.4",
@@ -29,8 +31,10 @@
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
 		"jakub-onderka/php-parallel-lint": "^1.0",
 		"phpcompatibility/php-compatibility": "^9.3",
+		"sensiolabs-de/deptrac-shim": "^0.5",
 		"sensiolabs/security-checker": "^6.0",
 		"squizlabs/php_codesniffer": "^3.5",
+		"slevomat/coding-standard": "^5.0",
 		"symfony/debug-pack": "^1.0",
 		"symfony/maker-bundle": "^1.13",
 		"symfony/profiler-pack": "^1.0",
@@ -46,12 +50,12 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"Adshares\\Adpay\\": "src/"
+			"Adshares\\AdPay\\": "src/"
 		}
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"Adshares\\Adpay\\Tests\\": "tests/"
+			"Adshares\\AdPay\\Tests\\": "tests/"
 		}
 	},
 	"replace": {
@@ -66,17 +70,20 @@
 		"auto-scripts": {
 			"cache:clear": "symfony-cmd"
 		},
+		"qa-check": [
+			"security-checker security:check",
+			"php bin/console lint:yaml config",
+			"parallel-lint --no-colors --blame --exclude vendor --exclude bin  .",
+			"phpcs -s config src tests",
+			"deptrac --no-ansi"
+		],
+		"test": "@test-coverage --no-coverage",
+		"test-coverage": "php bin/phpunit --testsuite Domain,Lib,Application,Infrastructure",
 		"post-install-cmd": [
 			"@auto-scripts"
 		],
 		"post-update-cmd": [
 			"@auto-scripts"
-		],
-		"qa-check": [
-			"security-checker security:check",
-			"parallel-lint --no-colors --blame --exclude vendor .",
-			"phpcs -s src --standard=PHPCompatibility",
-			"phpcs -s src --standard=PSR2"
 		]
 	},
 	"conflict": {
