--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,17 +11,25 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    Adshares\Adpay\:
-        resource: '../src/*'
-        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
+    Adshares\AdPay\UI\Command\:
+        resource: '../src/UI/Command'
 
-    # controllers are imported separately to make sure services can be injected
-    # as action arguments even if you don't extend any base controller class
-    Adshares\Adpay\Controller\:
-        resource: '../src/Controller'
+    Adshares\AdPay\UI\Controller\:
+        resource: '../src/UI/Controller'
         tags: ['controller.service_arguments']
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+#    Adshares\AdSelect\UI\EventListener\ApiExceptionListenerSubscriber:
+#        arguments:
+#            $env: '%env(APP_ENV)%'
+#            $logger: '@logger'
+#        tags:
+#            - { name: kernel.event_subscriber }
+
+#    Adshares\AdPay\Infrastructure\Doctrine\Client:
+#        resource: '../src/Infrastructure/Doctrine/Client.php'
+
+#    Adshares\AdPay\Infrastructure\Doctrine\Service:
+#        resource: '../src/Infrastructure/Doctrine/Service'
+
+
+#            $client: '@Adshares\AdSelect\Infrastructure\ElasticSearch\Client'
