--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -8,12 +8,7 @@
     <arg name="colors"/>
     <arg name="extensions" value="php"/>
 
+    <rule ref="PHPCompatibility"/>
     <rule ref="PSR2"/>
-
-    <file>bin/</file>
-    <file>config/</file>
-    <file>public/</file>
-    <file>src/</file>
-    <file>tests/</file>
-
+    <rule ref="SlevomatCodingStandard.TypeHints.DeclareStrictTypes" />
 </ruleset>
