--- a/composer.json
+++ b/composer.json
@@ -77,7 +77,8 @@
 			"phpcs -s config src tests",
 			"deptrac --no-ansi"
 		],
-		"test": "@test-coverage --no-coverage",
+		"test": "php bin/phpunit --testsuite Domain,Lib,Application,Infrastructure --no-coverage",
+		"test-ui": "php bin/phpunit --testsuite UI --no-coverage",
 		"test-coverage": "php bin/phpunit --testsuite Domain,Lib,Application,Infrastructure,UI",
 		"post-install-cmd": [
 			"@auto-scripts"
