--- a/.env.test
+++ b/.env.test
@@ -2,3 +2,4 @@
 KERNEL_CLASS='Adshares\AdPay\Kernel'
 APP_SECRET='s$cretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
+DATABASE_URL=sqlite:///%kernel.project_dir%/var/test.db
