--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
 		"symfony/flex": "^1.4",
 		"symfony/framework-bundle": "^4.3",
 		"symfony/monolog-bundle": "^3.4",
-		"symfony/yaml": "^4.3"
+		"symfony/yaml": "^4.3",
+		"ocramius/package-versions": "~1.4.0"
 	},
 	"require-dev": {
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
