--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,6 +17,7 @@ sonar.links.issue=https://github.com/adshares/adpay/issues
 
 # SQ standard properties
 sonar.sourceEncoding=UTF-8
-sonar.sources=adpay
+sonar.sources=src
 sonar.tests=tests
-sonar.python.coverage.reportPath=coverage.xml
+sonar.php.tests.reportPath=./var/phpunit/logfile.xml
+sonar.php.coverage.reportPaths=./var/phpunit/coverage.xml
