--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
 install:
   - composer install
   - php bin/console doctrine:database:create --env=test
-  - php bin/console doctrine:migrations:migrate --env=test
+  - php bin/console doctrine:migrations:migrate -n --env=test
 
 script:
   - composer qa-check
