--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,14 @@
 		"ext-json": "*",
 		"doctrine/doctrine-bundle": "^1.11",
 		"doctrine/doctrine-migrations-bundle": "^2.0",
+		"ocramius/package-versions": "~1.4.0",
 		"symfony/console": "^4.3",
 		"symfony/dotenv": "^4.3",
 		"symfony/flex": "^1.4",
 		"symfony/framework-bundle": "^4.3",
+		"symfony/lock": "^4.3",
 		"symfony/monolog-bundle": "^3.4",
-		"symfony/yaml": "^4.3",
-		"ocramius/package-versions": "~1.4.0"
+		"symfony/yaml": "^4.3"
 	},
 	"require-dev": {
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
