--- a/.env
+++ b/.env
@@ -20,6 +20,8 @@ APP_VERSION=1.0.0
 APP_NAME=AdPay
 APP_PORT=8012
 APP_HOST=localhost
+HUMAN_SCORE_THRESHOLD=0.5
+
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
