Fix logs configuration

--- a/config/packages/dev/monolog.yaml
+++ b/config/packages/dev/monolog.yaml
@@ -1,8 +1,11 @@
+parameters:
+    env(LOG_FILE_PATH): "%kernel.logs_dir%/%kernel.environment%.log"
+
 monolog:
     handlers:
         main:
             type: stream
-            path: "%kernel.logs_dir%/%kernel.environment%.log"
+            path: '%env(LOG_FILE_PATH)%'
             level: debug
             channels: ["!event"]
         # uncomment to get logging in your browser
