Fix logs & db configuration

--- a/config/packages/test/monolog.yaml
+++ b/config/packages/test/monolog.yaml
@@ -1,10 +1,7 @@
-parameters:
-    env(LOG_FILE_PATH): "%kernel.logs_dir%/%kernel.environment%.log"
-
 monolog:
     handlers:
         main:
             type: stream
-            path: '%env(LOG_FILE_PATH)%'
+            path: '%env(resolve:LOG_FILE_PATH)%'
             level: debug
             channels: ["!event"]
