--- a/.env
+++ b/.env
@@ -30,7 +30,9 @@ HUMAN_SCORE_THRESHOLD=0.5
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+
+#DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+
 ###< doctrine/doctrine-bundle ###
 
-#LOG_FILE_PATH=/var/log/adshares/adpay.log
+LOG_FILE_PATH=%kernel.logs_dir%/%kernel.environment%.log
