--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,3 +1,6 @@
+parameters:
+    env(DATABASE_URL): mysql://db_user:db_password@127.0.0.1:3306/db_name
+
 doctrine:
     dbal:
         # configure these for your database server
