--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -1,6 +1,3 @@
-parameters:
-    env(LOG_FILE_PATH): "%kernel.logs_dir%/%kernel.environment%.log"
-
 monolog:
     handlers:
         main:
@@ -10,7 +7,7 @@ monolog:
             excluded_http_codes: [404, 405]
         nested:
             type: stream
-            path: '%env(LOG_FILE_PATH)%'
+            path: '%env(resolve:LOG_FILE_PATH)%'
             level: debug
         console:
             type: console
@@ -18,7 +15,7 @@ monolog:
             channels: ["!event", "!doctrine"]
         deprecation:
             type: stream
-            path: '%env(LOG_FILE_PATH)%'
+            path: '%env(resolve:LOG_FILE_PATH)%'
         deprecation_filter:
             type: filter
             handler: deprecation
