--- a/.env
+++ b/.env
@@ -32,6 +32,7 @@ HUMAN_SCORE_THRESHOLD=0.5
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 
 #DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=
 
 ###< doctrine/doctrine-bundle ###
 
